feat: support multiple server hosts